# sql-fixer-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_space.py
server/: Dockerfile  __init__.py  app.py  database.py  requirements.txt  sql_fixer_environment.py  tasks.py
server/static/: index.html
